2006-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* puresize.h (BASE_PURESIZE): Increment to 1210500.

2006-07-04  Kim F. Storm  <storm@cua.dk>

	* xterm.c (x_delete_display): Don't free or derefence NULL pointers.

2006-07-04  Kenichi Handa  <handa@m17n.org>

	* fontset.c (Fset_overriding_fontspec_internal): Check if we need
	to update Voverriding_fontspec_alist.

2006-07-03  Richard Stallman  <rms@gnu.org>

	* xfns.c (Fx_create_frame): Move unwind_create_frame setup down.

	* xfaces.c (Fface_attribute_relative_p): Doc fix.

	* textprop.c (Fget_char_property_and_overlay): Doc fix.

	* eval.c (Fdefvaralias): Doc fix.

2006-07-03  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (sit_for): Fix preempt condition.

2006-07-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read_filtered_event): Treat select-window just like
	switch-frame.

2006-07-02  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (display_tool_bar_line): Skip glyphs which are too big
	to ever fit the tool-bar,
	(MAX_FRAME_TOOL_BAR_HEIGHT): New macro.
	(tool_bar_lines_needed): Use unused mode-line row as temp_row.
	(redisplay_tool_bar): Only clear desired matrix if we actually
	change the tool-bar window height.  Only try to make the tool-bar
	window bigger if there is actually room for it.

2006-06-30  Ralf Angeli  <angeli@caeruleus.net>

	* w32term.c (x_make_frame_visible): Use SystemParametersInfo with
	SPI_GETWORKAREA to find the dimensions of the screen work area,
	and adjust vertical position of the frame in order to avoid being
	covered by the task bar.

	* w32fns.c (w32_createwindow): Use CW_USEDEFAULT instead of
	f->left_pos and SH_SHOW instead of f->top_pos in the call to
	CreateWindow.  Record the actual position in f->left_pos and
	f->top_pos.

2006-06-30  John Paul Wallington  <jpw@pobox.com>

	* w32console.c (syms_of_ntterm) <w32-use-full-screen-buffer>:
	Doc fix - default value has changed.

2006-06-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
